--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vatsalya Singhi</title>
     <link rel="stylesheet" type="text/css" href="./index.css">
+    <link rel="icon" href="./assets/fevicon.jpeg" type="image/x-icon">
     <script src="https://use.fontawesome.com/329f05659a.js"></script>
 </head>
 
