--- a/index.html
+++ b/index.html
@@ -44,12 +44,13 @@
     </section>
 
     <div class="hide" id="navigation">
+        <img src="./assets/dp.jpg" alt="Profile" class="dp">
         <ul>
             <li><a onclick="navigateTo('sec')" href="#sec">Home</a></li>
             <li><a onclick="navigateTo('about')" href="#about">About</a></li>
             <li><a onclick="navigateTo('skills')" href="#skills">Skills</a></li>
-            <li><a onclick="navigateTo('education')" href="#education">Education</a></li>
             <li><a onclick="navigateTo('works')" href="#works">Past Works</a></li>
+            <li><a onclick="navigateTo('education')" href="#education">Education</a></li>
         </ul>
     </div>
 
