minor content update

--- a/index.html
+++ b/index.html
@@ -20,9 +20,21 @@
 
         <div class="content">
             <h2>Hello World,<br>I'm <span>Vatsalya Singhi</span> ;)</h2>
+            
             <p>
                 Software Engineer.
             </p>
+
+            <!-- <div class="wrapper">
+                <p class="wrapperWord">Coding is</p>
+                <div class="wordList">
+                    <span class="words">awesome</span>
+                    <span class="words">interesting</span>
+                    <span class="words">incredible</span>
+                    <span class="words">fantastic</span>
+                </div>
+            </div> -->
+
             <a href="#about">
                 <span></span>
                 <span></span>
@@ -116,8 +128,9 @@
                 <div class="skillList">
                     <h4 class="skillType">Languages</h4>
                     <ul>
+                        <li>Javascript</li>
                         <li>Typescript</li>
-                        <li>Java</li>
+                        <li>Core Java</li>
                         <li>PHP</li>
                         <li>Python</li>
                     </ul>
@@ -126,9 +139,9 @@
                 <div class="skillList">
                     <h4 class="skillType">Frameworks</h4>
                     <ul>
-                        <li>Angular</li>
-                        <li>Ionic</li>
-                        <li>Django</li>
+                        <li>Angular 13</li>
+                        <li>Ionic 5</li>
+                        <li>Express.js</li>
                         <li>Selenium</li>
                     </ul>
                 </div>
@@ -136,10 +149,9 @@
                 <div class="skillList">
                     <h4 class="skillType">Software</h4>
                     <ul>
-                        <li>Windows & Linux</li>
                         <li>VS Code</li>
-                        <li>Git</li>
-                        <li>Firebase</li>
+                        <li>Github & Gitlab</li>
+                        <li>Google Firebase</li>
                         <li>Postman</li>
                     </ul>
                 </div>
@@ -157,8 +169,13 @@
         <div class="works maincontent">
             <br>
             <ul>
+                <!-- <li>
+                    <span class="workdate">Oct'21 - <span class="present">Present</span></span> <span> Software
+                        Engineer @ <a href="https://www.cangonetworks.com/" target="_blank" class="workplace">CanGo
+                            Networks</a> </span>
+                </li> -->
                 <li>
-                    <span class="workdate">Sept'20 - <span class="present">Present</span></span> <span> Software
+                    <span class="workdate">Sept'20 - Aug'21</span> <span> Software
                         Engineer @ <a href="https://www.cangonetworks.com/" target="_blank" class="workplace">CanGo
                             Networks</a> </span>
                 </li>
@@ -198,6 +215,14 @@
             <br>
             <div>
                 <ul class="firstdegree">
+                    <li>
+                        <span class="main1"> <a
+                                href="https://www.srmist.edu.in/engineering/department-of-information-technology/about-the-department"
+                                target="_blank" class="nodecor"> Master's Degree in Applied Computer Science </a>
+                        </span> <br>
+                        <span class="main2"> FH Schmalkalden University of Applied Sciences, Germany </span> <br>
+                        <span class="main2"> 09/2021 - <span class="present">Present</span> </span>
+                    </li>
                     <li>
                         <span class="main1"> <a
                                 href="https://www.srmist.edu.in/engineering/department-of-information-technology/about-the-department"
@@ -265,9 +290,8 @@
                 <ul class="ml-10">
                     <li> <span> English </span> </li>
                     <li> <span> Hindi </span> </li>
-                    <li> <span> Tamil </span> </li>
-                    <li> <span> French </span> </li>
-                    <li> <span> German </span> </li>
+                    <!-- <li> <span> Tamil </span> </li> -->
+                    <!-- <li> <span> German </span> </li> -->
                     </p>
             </div>
 
@@ -295,6 +319,7 @@
                 console.log('err=>', err);
             }
         }
+        
         function navigateTo(url) {
             try {
                 var sec = document.getElementById('sec');
@@ -328,6 +353,7 @@
             }, 2000)
         }
     </script>
+
 </body>
 
 </html>
